[tool.poetry]
name = "aws-cloudwatch-health-dashboard"
version = "0.1.0"
description = "A CLI tool for querying CloudWatch metrics and outputting a structured health summary"
authors = ["Tiarnan Byrne <tbyrne842@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34"
pyyaml = "^6.0"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
moto = {extras = ["cloudwatch"], version = "^5.0"}
black = "^24.0"
flake8 = "^7.0"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
